Changes made with absolute and relative positioning

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  text-align: center;
 }
 
 hr {
@@ -31,6 +32,8 @@ h3{
 
 .topContainer {
   background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middleContainer {
@@ -39,4 +42,16 @@ h3{
 
 .bottomContainer {
   background-color: yellow;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
